grafix/AntiGrain.Win32/interface.h


/*
 *	If we just want to expose the raw API entry points (which are plain "C"
 *	functions) we don't need to know precisely about all the internal types
 *	which are required.
 *
 *	We map structures to void and enums to int.
 */

typedef void AggBuffer;

typedef void AggPath;

typedef void AggRasterizer;

typedef void AggRendererGradient;

typedef void AggRendererImage;

typedef void AggRendererSolid;

typedef void AggRendererSmooth;

typedef void AggRendererBase;

	typedef void font_face;

struct AggBuffer;

struct AggPath;

struct AggRasterizer;

struct AggRendererGradient;

struct AggRendererImage;

struct AggRendererSolid;

struct AggRendererSmooth;

struct AggRendererBase;

extern "C" AGGDLL void				AggRasterizerSetTransform(AggRasterizer* rasterizer, double xx, double xy, double yx, double yy, double tx, double ty);

extern "C" AGGDLL void				AggRasterizerSetClipBox(AggRasterizer* rasterizer, double x1, double y1, double x2, double y2);

extern "C" AGGDLL void				AggRasterizerResetClipBox(AggRasterizer* rasterizer);

extern "C" AGGDLL void				AggRasterizerAddPath(AggRasterizer* rasterizer, AggPath* path, bool curved);

extern "C" AGGDLL void				AggRasterizerAddGlyph(AggRasterizer* rasterizer, agg::font_face* face, int glyph, double x, double y, double scale);

extern "C" AGGDLL void				AggRasterizerAddGlyphXY(AggRasterizer* rasterizer, agg::font_face* face, int glyph, double x, double y, double scale_x, double scale_y);

extern "C" AGGDLL void				AggRasterizerAddPathStroke1(AggRasterizer* rasterizer, AggPath* path, double width, bool curved);

extern "C" AGGDLL void				AggRasterizerAddPathStroke2(AggRasterizer* rasterizer, AggPath* path, double width, int cap, int join, double miter_limit, bool curved);

extern "C" AGGDLL void				AggRasterizerRenderSolid(AggRasterizer* rasterizer, AggRendererSolid* renderer);

extern "C" AGGDLL void				AggRasterizerRenderImage(AggRasterizer* rasterizer, AggRendererImage* renderer);

extern "C" AGGDLL void				AggRasterizerRenderGradient(AggRasterizer* rasterizer, AggRendererGradient* renderer);

extern "C" AGGDLL void				AggRasterizerDelete(AggRasterizer* rasterizer);


/*****************************************************************************/
/*	from agg_renderer.cpp													 */

extern "C" AGGDLL void				AggRendererSolidSetAlphaMask(AggRendererSolid* renderer, AggBuffer* buffer, int component);

extern "C" AGGDLL void				AggRendererSmoothSetAlphaMask(AggRendererSmooth* renderer, AggBuffer* buffer, int component);

extern "C" AGGDLL void				AggRendererImageSetAlphaMask(AggRendererImage* renderer, AggBuffer* buffer, int component);

extern "C" AGGDLL void				AggRendererGradientSetAlphaMask(AggRendererGradient* renderer, AggBuffer* buffer, int component);


extern "C" AGGDLL AggRendererSolid*	AggRendererSolidNew(AggBuffer* buffer);

extern "C" AGGDLL void				AggRendererSolidClear(AggRendererSolid* renderer, double r, double g, double b, double a);

extern "C" AGGDLL void				AggRendererSolidColor(AggRendererSolid* renderer, double r, double g, double b, double a);

extern "C" AGGDLL void				AggRendererSolidDelete(AggRendererSolid* renderer);


extern "C" AGGDLL AggRendererSmooth* AggRendererSmoothNew(AggBuffer* buffer);

extern "C" AGGDLL void				AggRendererSmoothColor(AggRendererSmooth* renderer, double r, double g, double b, double a);

extern "C" AGGDLL void				AggRendererSmoothSetup(AggRendererSmooth* renderer, double r1, double r2, double xx, double xy, double yx, double yy, double tx, double ty);

extern "C" AGGDLL void				AggRendererSmoothAddPath(AggRendererSmooth* renderer, AggPath* path);

extern "C" AGGDLL void				AggRendererSmoothDelete(AggRendererSmooth* renderer);


extern "C" AGGDLL AggRendererImage*	AggRendererImageNew(AggBuffer* buffer);

extern "C" AGGDLL void				AggRendererImageMatrix(AggRendererImage* renderer, double xx, double xy, double yx, double yy, double tx, double ty);

extern "C" AGGDLL void				AggRendererImageSource1(AggRendererImage* renderer, AggBuffer* buffer);

extern "C" AGGDLL void				AggRendererImageSource2(AggRendererImage* renderer, void* buffer, int dx, int dy, int stride);

extern "C" AGGDLL void				AggRendererImageSetStretchMode(AggRendererImage* renderer, int mode, double radius);

extern "C" AGGDLL void				AggRendererImageDelete(AggRendererImage* renderer);


extern "C" AGGDLL AggRendererGradient* AggRendererGradientNew(AggBuffer* buffer);

extern "C" AGGDLL void				AggRendererGradientDelete(AggRendererGradient* renderer);

extern "C" AGGDLL void				AggRendererGradientSelect(AggRendererGradient* renderer, int id);

extern "C" AGGDLL void				AggRendererGradientRange(AggRendererGradient* renderer, double r1, double r2);

extern "C" AGGDLL void				AggRendererGradientMatrix(AggRendererGradient* renderer, double xx, double xy, double yx, double yy, double tx, double ty);

extern "C" AGGDLL void				AggRendererGradientColor1(AggRendererGradient* renderer, const double r[256], const double g[256], const double b[256], const double a[256]);

extern "C" AGGDLL void				AggRendererFill4Colors(AggRendererBase* renderer, int x, int y, int dx, int dy, double r1, double g1, double b1, double r2, double g2, double b2, double r3, double g3, double b3, double r4, double g4, double b4);