AntiGrain.CSharp/Native.cs


        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRasterizerSetTransform(IntPtr rasterizer, double xx, double xy, double yx, double yy, double tx, double ty);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRasterizerSetClipBox(IntPtr rasterizer, double x1, double y1, double x2, double y2);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRasterizerResetClipBox(IntPtr rasterizer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRasterizerAddPath(IntPtr rasterizer, IntPtr path, [MarshalAs(UnmanagedType.U1)] bool curves);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRasterizerAddGlyph(IntPtr rasterizer, IntPtr face, int glyph, double x, double y, double scale);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRasterizerAddGlyphXY(IntPtr rasterizer, IntPtr face, int glyph, double x, double y, double scale_x, double scale_y);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRasterizerAddPathStroke1(IntPtr rasterizer, IntPtr path, double width, [MarshalAs(UnmanagedType.U1)] bool curves);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRasterizerAddPathStroke2(IntPtr rasterizer, IntPtr path, double width, int cap, int join, double miter_limit, [MarshalAs(UnmanagedType.U1)] bool curves);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRasterizerRenderSolid(IntPtr rasterizer, IntPtr renderer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRasterizerRenderImage(IntPtr rasterizer, IntPtr renderer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRasterizerRenderGradient(IntPtr rasterizer, IntPtr renderer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRasterizerDelete(IntPtr rasterizer);
        #endregion

        #region Renderer

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererFill4Colors(IntPtr renderer, int x, int y, int dx, int dy, double r1, double g1, double b1, double r2, double g2, double b2, double r3, double g3, double b3, double r4, double g4, double b4);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern IntPtr AggRendererSolidNew(IntPtr buffer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererSolidClear(IntPtr renderer, double r, double g, double b, double a);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererSolidColor(IntPtr renderer, double r, double g, double b, double a);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererSolidDelete(IntPtr renderer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererSolidSetAlphaMask(IntPtr renderer, IntPtr buffer, int component);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern IntPtr AggRendererSmoothNew(IntPtr buffer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererSmoothColor(IntPtr renderer, double r, double g, double b, double a);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererSmoothSetup(IntPtr renderer, double r1, double r2, double xx, double xy, double yx, double yy, double tx, double ty);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererSmoothAddPath(IntPtr renderer, IntPtr path);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererSmoothDelete(IntPtr renderer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererSmoothSetAlphaMask(IntPtr renderer, IntPtr buffer, int component);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern IntPtr AggRendererImageNew(IntPtr buffer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererImageMatrix(IntPtr renderer, double xx, double xy, double yx, double yy, double tx, double ty);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererImageSource1(IntPtr renderer, IntPtr buffer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererImageSource2(IntPtr renderer, IntPtr byte_buffer, int dx, int dy, int stride);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererImageDelete(IntPtr renderer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererImageSetStretchMode(IntPtr renderer, int mode, double radius);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererImageSetAlphaMask(IntPtr renderer, IntPtr buffer, int component);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern IntPtr AggRendererGradientNew(IntPtr buffer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererGradientDelete(IntPtr renderer);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererGradientSelect(IntPtr renderer, int id);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererGradientColor1(IntPtr renderer, double[] r, double[] g, double[] b, double[] a);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererGradientRange(IntPtr renderer, double r1, double r2);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererGradientMatrix(IntPtr renderer, double xx, double xy, double yx, double yy, double tx, double ty);

        [DllImport("AntiGrain.Win32", CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void AggRendererGradientSetAlphaMask(IntPtr renderer, IntPtr buffer, int component);

        #endregion
    }
}
